--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Welcome to Dockerized Nginx</title>
 </head>
 <body>
-    <h1>Hello from Dockerized Nginx!<br>
-    This is my homepage.</h1>
-
+    <h1>
+    高雄科技大學 海事資訊科技系
+    </h1>
     <p>成員：吳曜恩、郭晉銘、蕭傑睿、高煜欽</p>
-    <p>本網站展示我們的專題成果，使用 Docker 架設，支援區網與跨網段公開瀏覽。</p>
 </body>
 </html>
