--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <h3>📊 網站數據統計</h3>
     <div class="card">
-        <div class="number">150+</div>
+        <div class="number">152</div>
         <div>總訪問人次</div>
     </div>
 
