--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>高雄科技大學 海事資訊科技系</h1>
 
-    <h2>📘 專題名稱：跨網段靜態網站部署與展示</h2>
+    <h2>📘 專題名稱：GitHub Pages 靜態網站部署與展示</h2>
 
     <p><strong>成員：</strong>吳曜恩、郭晉銘、蕭傑睿、高煜欽</p>
 </body>
