--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <script>
-        const apiKey = "feec20b7356c14a56d53020616dc5886";
+        const apiKey = "f508798d0a8679b9b4b7931c1b9a24e";  // 你的新 API 金鑰
         const lat = 22.6086;
         const lon = 120.2719;
         const url = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric&lang=zh_tw`;
