--- a/index.html
+++ b/index.html
@@ -33,148 +33,206 @@
             max-width: 100%;
             height: auto;
         }
+        label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        .extra-info {
+            margin-top: 5px;
+        }
     </style>
 </head>
 <body>
 
-    <h1>高雄科技大學 海事資訊科技系</h1>
-    <h2>📘 專題名稱：GitHub Pages 靜態網站部署與展示</h2>
-    <p><strong>成員：</strong>吳曜恩、郭晉銘、蕭傑睿、高煜欽</p>
+<h1>高雄科技大學 海事資訊科技系</h1>
+<h2>📘 專題名稱：GitHub Pages 靜態網站部署與展示</h2>
+<p><strong>成員：</strong>吳曜恩、郭晉銘、蕭傑睿、高煜欽</p>
 
-    <div class="weather-grid">
-        <div class="weather-box">
-            <h3>📍 旗津區目前天氣：</h3>
-            <p id="weather-now-qijin">載入中...</p>
-            <p id="now-update-qijin" class="update-time"></p>
-            <h3>📈 前天氣溫折線圖</h3>
-            <canvas id="chart-qijin"></canvas>
-            <p id="chart-update-qijin" class="update-time"></p>
-        </div>
-
-        <div class="weather-box">
-            <h3>📍 中壢區目前天氣：</h3>
-            <p id="weather-now-chungli">載入中...</p>
-            <p id="now-update-chungli" class="update-time"></p>
-            <h3>📈 前天氣溫折線圖</h3>
-            <canvas id="chart-chungli"></canvas>
-            <p id="chart-update-chungli" class="update-time"></p>
-        </div>
-
-        <div class="weather-box">
-            <h3>📍 魚池鄉目前天氣：</h3>
-            <p id="weather-now-yuchi">載入中...</p>
-            <p id="now-update-yuchi" class="update-time"></p>
-            <h3>📈 前天氣溫折線圖</h3>
-            <canvas id="chart-yuchi"></canvas>
-            <p id="chart-update-yuchi" class="update-time"></p>
-        </div>
+<div class="weather-grid">
+    <div class="weather-box">
+        <h3>📍 旗津區目前天氣：</h3>
+        <p id="weather-now-qijin">載入中...</p>
+        <div class="extra-info" id="extra-qijin"></div>
+        <p id="now-update-qijin" class="update-time"></p>
+        <h3>📈 氣溫折線圖</h3>
+        <label>選擇日期：
+            <input type="date" id="date-picker-qijin">
+        </label>
+        <canvas id="chart-qijin"></canvas>
+        <p id="chart-update-qijin" class="update-time"></p>
     </div>
 
-    <script>
-        const weatherText = {
-            0: "☀ 晴朗", 1: "🌤 大致晴朗", 2: "⛅ 多雲", 3: "☁ 陰天",
-            45: "🌫 霧", 48: "🌫 霧霾", 51: "🌦 毛毛雨", 61: "🌧 小雨",
-            63: "🌧 中雨", 65: "🌧 大雨", 71: "❄ 小雪", 80: "🌧 短暫陣雨", 95: "⛈ 雷雨"
-        };
+    <div class="weather-box">
+        <h3>📍 中壢區目前天氣：</h3>
+        <p id="weather-now-chungli">載入中...</p>
+        <div class="extra-info" id="extra-chungli"></div>
+        <p id="now-update-chungli" class="update-time"></p>
+        <h3>📈 氣溫折線圖</h3>
+        <label>選擇日期：
+            <input type="date" id="date-picker-chungli">
+        </label>
+        <canvas id="chart-chungli"></canvas>
+        <p id="chart-update-chungli" class="update-time"></p>
+    </div>
 
-        const locations = [
-            { name: "qijin", label: "旗津區", lat: 22.6086, lon: 120.2719 },
-            { name: "chungli", label: "中壢區", lat: 24.9547, lon: 121.2260 },
-            { name: "yuchi", label: "魚池鄉", lat: 23.8886, lon: 120.9334 }
-        ];
+    <div class="weather-box">
+        <h3>📍 魚池鄉目前天氣：</h3>
+        <p id="weather-now-yuchi">載入中...</p>
+        <div class="extra-info" id="extra-yuchi"></div>
+        <p id="now-update-yuchi" class="update-time"></p>
+        <h3>📈 氣溫折線圖</h3>
+        <label>選擇日期：
+            <input type="date" id="date-picker-yuchi">
+        </label>
+        <canvas id="chart-yuchi"></canvas>
+        <p id="chart-update-yuchi" class="update-time"></p>
+    </div>
+</div>
 
-        const today = new Date();
-        const targetDate = new Date(today);
-        targetDate.setDate(today.getDate() - 2);
-        const yyyy = targetDate.getFullYear();
-        const mm = String(targetDate.getMonth() + 1).padStart(2, '0');
-        const dd = String(targetDate.getDate()).padStart(2, '0');
-        const dateStr = `${yyyy}-${mm}-${dd}`;
+<script>
+    const weatherText = {
+        0: "☀ 晴朗", 1: "🌤 大致晴朗", 2: "⛅ 多雲", 3: "☁ 陰天",
+        45: "🌫 霧", 48: "🌫 霧霾", 51: "🌦 毛毛雨", 61: "🌧 小雨",
+        63: "🌧 中雨", 65: "🌧 大雨", 71: "❄ 小雪", 80: "🌧 短暫陣雨", 95: "⛈ 雷雨"
+    };
 
-        function getColorForTemp(temp) {
-            if (temp < -20) return '#000080';
-            if (temp < -10) return '#0055ff';
-            if (temp < 0) return '#66ccff';
-            if (temp < 10) return '#ccffff';
-            if (temp < 20) return '#ffff99';
-            if (temp < 30) return '#ffaa33';
-            if (temp < 40) return '#ff5500';
-            return '#cc0000';
-        }
+    const uvLevel = (value) => {
+        if (value <= 2) return "🟢 低";
+        if (value <= 5) return "🟡 中等";
+        if (value <= 7) return "🟠 高";
+        if (value <= 10) return "🔴 很高";
+        return "🟣 極高";
+    };
 
-        locations.forEach(loc => {
-            const nowUrl = `https://api.open-meteo.com/v1/forecast?latitude=${loc.lat}&longitude=${loc.lon}&current=temperature_2m,apparent_temperature,weather_code&timezone=Asia%2FTaipei`;
-            fetch(nowUrl)
-                .then(res => res.json())
-                .then(data => {
-                    const temp = data.current.temperature_2m.toFixed(1);
-                    const feel = data.current.apparent_temperature.toFixed(1);
-                    const code = data.current.weather_code;
-                    const desc = weatherText[code] || "未知天氣";
-                    document.getElementById(`weather-now-${loc.name}`).innerText = `${temp}°C（體感 ${feel}°C），${desc}`;
-                    document.getElementById(`now-update-${loc.name}`).innerText = `更新時間：${new Date().toLocaleString("zh-TW")}`;
-                });
+    const locations = [
+        { name: "qijin", label: "旗津區", lat: 22.6086, lon: 120.2719 },
+        { name: "chungli", label: "中壢區", lat: 24.9547, lon: 121.2260 },
+        { name: "yuchi", label: "魚池鄉", lat: 23.8886, lon: 120.9334 }
+    ];
 
-            const chartUrl = `https://archive-api.open-meteo.com/v1/archive?latitude=${loc.lat}&longitude=${loc.lon}&start_date=${dateStr}&end_date=${dateStr}&hourly=temperature_2m&timezone=Asia%2FTaipei`;
-            fetch(chartUrl)
-                .then(response => response.json())
-                .then(data => {
-                    const temps = data.hourly.temperature_2m;
-                    const hours = Array.from({length: 24}, (_, i) => `${i}:00`);
-                    const canvas = document.getElementById(`chart-${loc.name}`);
-                    const ctx = canvas.getContext('2d');
+    function getColorForTemp(temp) {
+        if (temp >= 37) return '#800080';
+        if (temp >= 35) return '#c00060';
+        if (temp >= 33) return '#d00000';
+        if (temp >= 31) return '#e06000';
+        if (temp >= 29) return '#ff8000';
+        if (temp >= 27) return '#ffc000';
+        if (temp >= 25) return '#ffff00';
+        if (temp >= 23) return '#c0ff00';
+        if (temp >= 21) return '#80ff00';
+        if (temp >= 19) return '#40ff80';
+        if (temp >= 17) return '#00ff80';
+        if (temp >= 15) return '#00ffc0';
+        if (temp >= 13) return '#00ffff';
+        if (temp >= 11) return '#00c0ff';
+        if (temp >= 9) return '#0080ff';
+        if (temp >= 7) return '#0040ff';
+        if (temp >= 5) return '#0000ff';
+        if (temp >= 3) return '#0000c0';
+        if (temp >= 1) return '#000080';
+        return '#000040';
+    }
 
-                    const gradient = ctx.createLinearGradient(0, 0, 0, canvas.height);
-                    gradient.addColorStop(0, '#cc0000');
-                    gradient.addColorStop(0.2, '#ff5500');
-                    gradient.addColorStop(0.4, '#ffaa33');
-                    gradient.addColorStop(0.6, '#ffff99');
-                    gradient.addColorStop(0.8, '#66ccff');
-                    gradient.addColorStop(1, '#0055ff');
+    function fetchChartAndRender(loc, dateStr) {
+        const chartUrl = `https://archive-api.open-meteo.com/v1/archive?latitude=${loc.lat}&longitude=${loc.lon}&start_date=${dateStr}&end_date=${dateStr}&hourly=temperature_2m&timezone=Asia%2FTaipei`;
 
-                    new Chart(ctx, {
-                        type: 'line',
-                        data: {
-                            labels: hours,
-                            datasets: [{
-                                label: '氣溫（°C）',
-                                data: temps,
-                                borderColor: '#888',
-                                backgroundColor: gradient,
-                                fill: true,
-                                tension: 0.3,
-                                pointRadius: 3,
-                                pointHoverRadius: 6,
-                                segment: {
-                                    borderColor: ctx => getColorForTemp(ctx.p1.parsed.y)
-                                },
-                                pointBackgroundColor: temps.map(t => getColorForTemp(t))
-                            }]
+        fetch(chartUrl)
+            .then(response => response.json())
+            .then(data => {
+                const temps = data.hourly.temperature_2m;
+                const hours = Array.from({length: 24}, (_, i) => `${i}:00`);
+                const canvas = document.getElementById(`chart-${loc.name}`);
+                const ctx = canvas.getContext('2d');
+
+                if (canvas.chartInstance) {
+                    canvas.chartInstance.destroy();
+                }
+
+                canvas.chartInstance = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels: hours,
+                        datasets: [{
+                            label: '氣溫（°C）',
+                            data: temps,
+                            borderColor: '#888',
+                            backgroundColor: 'rgba(0,0,0,0)',
+                            fill: false,
+                            tension: 0.3,
+                            pointRadius: 4,
+                            pointHoverRadius: 6,
+                            borderWidth: 2,
+                            pointBackgroundColor: temps.map(t => getColorForTemp(t)),
+                            segment: {
+                                borderColor: ctx => getColorForTemp(ctx.p1.parsed.y)
+                            }
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        plugins: {
+                            legend: { display: true },
+                            title: {
+                                display: true,
+                                text: `${loc.label} ${dateStr} 每小時氣溫變化圖`
+                            }
                         },
-                        options: {
-                            responsive: true,
-                            plugins: {
-                                legend: { display: true },
-                                title: {
-                                    display: true,
-                                    text: `${loc.label} ${dateStr} 每小時氣溫變化圖`
-                                }
+                        scales: {
+                            y: {
+                                beginAtZero: false,
+                                title: { display: true, text: '氣溫（°C）' }
                             },
-                            scales: {
-                                y: {
-                                    beginAtZero: false,
-                                    title: { display: true, text: '氣溫（°C）' }
-                                },
-                                x: {
-                                    title: { display: true, text: '時間（小時）' }
-                                }
+                            x: {
+                                title: { display: true, text: '時間（小時）' }
                             }
                         }
-                    });
-
-                    document.getElementById(`chart-update-${loc.name}`).innerText = `更新時間：${new Date().toLocaleString("zh-TW")}`;
+                    }
                 });
+
+                document.getElementById(`chart-update-${loc.name}`).innerText = `更新時間：${new Date().toLocaleString("zh-TW")}`;
+            });
+    }
+
+    locations.forEach(loc => {
+        const nowUrl = `https://api.open-meteo.com/v1/forecast?latitude=${loc.lat}&longitude=${loc.lon}&current=temperature_2m,apparent_temperature,weather_code,windspeed_10m,relative_humidity_2m&daily=uv_index_max&timezone=Asia%2FTaipei`;
+
+        fetch(nowUrl)
+            .then(res => res.json())
+            .then(data => {
+                const temp = data.current.temperature_2m.toFixed(1);
+                const feel = data.current.apparent_temperature.toFixed(1);
+                const code = data.current.weather_code;
+                const wind = data.current.windspeed_10m.toFixed(1);
+                const humid = data.current.relative_humidity_2m.toFixed(0);
+                const uv = data.daily.uv_index_max[0];
+
+                const desc = weatherText[code] || "未知天氣";
+                document.getElementById(`weather-now-${loc.name}`).innerText =
+                    `${temp}°C（體感 ${feel}°C），${desc}`;
+
+                document.getElementById(`extra-${loc.name}`).innerHTML = `
+                    🌬 風速：${wind} m/s<br>
+                    💧 濕度：${humid}%<br>
+                    🌞 UV 指數：${uv}（${uvLevel(uv)}）
+                `;
+
+                document.getElementById(`now-update-${loc.name}`).innerText =
+                    `更新時間：${new Date().toLocaleString("zh-TW")}`;
+            });
+
+        const today = new Date();
+        const defaultDate = new Date(today);
+        defaultDate.setDate(today.getDate() - 2);
+        const defaultDateStr = defaultDate.toISOString().split("T")[0];
+
+        const dateInput = document.getElementById(`date-picker-${loc.name}`);
+        dateInput.value = defaultDateStr;
+        fetchChartAndRender(loc, defaultDateStr);
+
+        dateInput.addEventListener('change', () => {
+            fetchChartAndRender(loc, dateInput.value);
         });
-    </script>
+    });
+</script>
 </body>
 </html>
