--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <div class="weather-grid">
     <div class="weather-box">
-        <h3>📍 旗津區目前天氣：</h3>
+        <h3>📍 高雄市旗津區目前天氣：</h3>
         <p id="weather-now-qijin">載入中...</p>
         <div class="extra-info" id="extra-qijin"></div>
         <p id="now-update-qijin" class="update-time"></p>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="weather-box">
-        <h3>📍 中壢區目前天氣：</h3>
+        <h3>📍 桃園市中壢區目前天氣：</h3>
         <p id="weather-now-chungli">載入中...</p>
         <div class="extra-info" id="extra-chungli"></div>
         <p id="now-update-chungli" class="update-time"></p>
@@ -76,7 +76,7 @@
     </div>
 
     <div class="weather-box">
-        <h3>📍 魚池鄉目前天氣：</h3>
+        <h3>📍 南投縣魚池鄉目前天氣：</h3>
         <p id="weather-now-yuchi">載入中...</p>
         <div class="extra-info" id="extra-yuchi"></div>
         <p id="now-update-yuchi" class="update-time"></p>
