--- a/index.html
+++ b/index.html
@@ -278,17 +278,17 @@
 
         <h2>2025年熱門遊戲推薦</h2>
         <ul class="recommend">
-            <li><strong>魔物獵人 荒野</strong>（Monster Hunter Wilds）－系列最新作，帶來全新狩獵體驗與開放世界探索[2]。</li>
-            <li><strong>人中之龍8 外傳：Pirates in Hawaii</strong>－人氣系列全新外傳，故事舞台移至夏威夷[2]。</li>
-            <li><strong>Avowed 宣誓</strong>－Obsidian 製作的奇幻 RPG，主打自由探索與劇情選擇[2]。</li>
-            <li><strong>毀滅戰士：黑暗時代</strong>（DOOM: The Dark Ages）－經典射擊遊戲再進化，動作與畫面全面升級[2]。</li>
-            <li><strong>艾爾登法環：黑夜君臨</strong>（Elden Ring: Shadow of the Erdtree）－超高人氣魂系遊戲大型資料片[2]。</li>
-            <li><strong>死亡擱淺2：冥灘之上</strong>（Death Stranding 2: On the Beach）－小島秀夫新作，劇情與玩法再突破[2]。</li>
-            <li><strong>羊蹄山戰鬼</strong>（Phantom Blade: Yamato）－動作冒險新作，日式武士題材[2]。</li>
-            <li><strong>真‧三國無雙 起源</strong>－經典無雙系列回歸初心，三國戰場再現[2]。</li>
-            <li><strong>GTA6（俠盜獵車手6）</strong>－雖確定延期至2026年，但預告片、地圖、角色等話題持續發燒[2]。</li>
+            <li><strong>魔物獵人 荒野</strong>（Monster Hunter Wilds）－系列最新作，帶來全新狩獵體驗與開放世界探索。</li>
+            <li><strong>人中之龍8 外傳：Pirates in Hawaii</strong>－人氣系列全新外傳，故事舞台移至夏威夷。</li>
+            <li><strong>Avowed 宣誓</strong>－Obsidian 製作的奇幻 RPG，主打自由探索與劇情選擇。</li>
+            <li><strong>毀滅戰士：黑暗時代</strong>（DOOM: The Dark Ages）－經典射擊遊戲再進化，動作與畫面全面升級。</li>
+            <li><strong>艾爾登法環：黑夜君臨</strong>（Elden Ring: Shadow of the Erdtree）－超高人氣魂系遊戲大型資料片。</li>
+            <li><strong>死亡擱淺2：冥灘之上</strong>（Death Stranding 2: On the Beach）－小島秀夫新作，劇情與玩法再突破。</li>
+            <li><strong>羊蹄山戰鬼</strong>（Phantom Blade: Yamato）－動作冒險新作，日式武士題材。</li>
+            <li><strong>真‧三國無雙 起源</strong>－經典無雙系列回歸初心，三國戰場再現。</li>
+            <li><strong>GTA6（俠盜獵車手6）</strong>－雖確定延期至2026年，但預告片、地圖、角色等話題持續發燒。</li>
         </ul>
-        <p style="color:#888;font-size:14px;">資料來源：GASH 樂購部落格 2025 3A遊戲推薦[2]。</p>
+        <p style="color:#888;font-size:14px;">資料來源：GASH 樂購部落格 2025 3A遊戲推薦。</p>
     </main>
 </section><hr style='border: none; border-top: 2px solid #ccc; margin: 48px 0; width: 90%;'><section id="streaming-culture">
 <header>
